--- a/inst/tutorials/07chemical/chemical.Rmd
+++ b/inst/tutorials/07chemical/chemical.Rmd
@@ -203,3 +203,5 @@ Karline Soetaert, Thomas Petzoldt, R. Woodrow Setzer (2010). Solving Differentia
   DOI: 10.18637/jss.v033.i09. http://www.jstatsoft.org/v33/i09/
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
+
+Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
