--- a/inst/tutorials/09enzymatic/enzymatic.Rmd
+++ b/inst/tutorials/09enzymatic/enzymatic.Rmd
@@ -151,7 +151,8 @@ question(sprintf("How would you characterize a process whose rate is described b
  )
 ```
 
-## Textbook
+## Textbook and Slides
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
 
+Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
