--- a/inst/tutorials/10partitioning/partitioning.Rmd
+++ b/inst/tutorials/10partitioning/partitioning.Rmd
@@ -245,10 +245,8 @@ require(RTM)
 RTMexercise("partitioning")
 ```
 
-## References
-
-R Core Team (2020). R: A language and environment for statistical computing. R
-  Foundation for Statistical Computing, Vienna, Austria. URL
-  https://www.R-project.org/.
+## Textbook and Slides
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
+
+Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
